--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
              <a href="file:///C:/Users/_/Desktop/Thrive%201/index.html"><b>Головна</b></a>
              <br><a href="file:///C:/Users/_/Desktop/Thrive%202/index.html"><b>Структури, білки, зовнішні, органели</b></a></br>
              <br><a href="file:///C:/Users/_/Desktop/Thrive%203/index.html"><b>Мембрани</b></a><br>
-             <br><a href="file:///C:/Users/_/Desktop/Thrive%204/index.html"><b>Багатоклітиність</b></a><br>
+             <br><a href="https://illya-io.github.io/Page-4/"><b>Багатоклітиність</b></a><br>
         </nav>
         <main>
             <p><span class="gg">Нормльна:</span> тут і сказати не має що.</p>
