--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </header>
         <nav>
             <a href class="Nav">Навігація:</a>
-             <a href="file:///C:/Users/_/Desktop/Thrive%201/index.html"><b>Головна</b></a>
-             <br><a href="file:///C:/Users/_/Desktop/Thrive%202/index.html"><b>Структури, білки, зовнішні, органели</b></a></br>
-             <br><a href="file:///C:/Users/_/Desktop/Thrive%203/index.html"><b>Мембрани</b></a><br>
+             <a href=""><b>Головна</b></a>
+             <br><a href=""><b>Структури, білки, зовнішні, органели</b></a></br>
+             <br><a href=""><b>Мембрани</b></a><br>
              <br><a href="https://illya-io.github.io/Page-4/"><b>Багатоклітиність</b></a><br>
         </nav>
         <main>
