--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <a href class="Nav">Навігація:</a>
              <a href=""><b>Головна</b></a>
-             <br><a href=""><b>Структури, білки, зовнішні, органели</b></a></br>
+             <br><a href="https://illya-io.github.io/Page-2/"><b>Структури, білки, зовнішні, органели</b></a></br>
              <br><a href=""><b>Мембрани</b></a><br>
              <br><a href="https://illya-io.github.io/Page-4/"><b>Багатоклітиність</b></a><br>
         </nav>
